--- a/app/templates/district.html
+++ b/app/templates/district.html
@@ -5,7 +5,7 @@
 <ul>
     {% for candidate in candidates %}
     <li>
-        <a href="{{url_for('handlers.candidate_summary', candidate_id=candidate.candidate_id)}}">
+        <a href="{{url_for('handlers.candidate_summary', candidate_id=candidate.id)}}">
             {{ candidate.name }}
         </a>
     </li>
