Fixing contribution loading.

--- a/app/templates/flagged_individual_contributors.html
+++ b/app/templates/flagged_individual_contributors.html
@@ -6,7 +6,7 @@
 <ul>
 {% for contributor in contributors %}
     <li style="margin-bottom:2cm">
-        {{contributor.name}}, {{contributor.occupation}}
+        {{contributor.name}} &mdash; {{contributor.occupation}}
         <h4>Appears as:</h4>
         <table style="border-spacing: 50px 0;">
             <tr>
