- Adding model for flagged employers. - Adding model for matching rules.

--- a/app/templates/flagged_individual_contributions_detail.html
+++ b/app/templates/flagged_individual_contributions_detail.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <title>Contributions detail</title>
-<h1>Contributions from {{ contributor.name }} to {{ candidate.name }}</h1>
+<h1>Contributions from {{ employer.name }} employees to {{ candidate.name }}</h1>
 <table style="border-spacing: 50px 0;">
     <tr>
-        <th>Date</th>
+        <th>Contributor name</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Occupation</th>
         <th>Amount</th>
-        <th>Contributing as</th>
-        <th>Committee</th>
-        <th>Transaction Type</th>
     </tr>
-    {% for contribution in flagged_individual_contributions %}
+    {% for (contributor, amount) in flagged_individual_contributions %}
     <tr>
-        <td>{{contribution.date}}</td>
-        <td>{{contribution.amount}}</td>
-        <td>{{contribution.contributor.name}}</td>
-        <td>{{contribution.committee.name}}</td>
-        <td>{{contribution.transaction_type}}</td>
+        <td>{{contributor.name}}</td>
+        <td>{{contributor.city}}</td>
+        <td>{{contributor.state}}</td>
+        <td>{{contributor.occupation}}</td>
+        <td>{{amount}}</td>
     </tr>
     {% endfor %}
 </table>
