--- a/app/templates/candidate.html
+++ b/app/templates/candidate.html
@@ -11,19 +11,13 @@
 <h2>Flagged Individual Contributions</h2>
 <table style="border-spacing: 50px 0;">
     <tr>
-        <th>Contributor</th>
-        <th>City</th>
-        <th>Employer</th>
-        <th>Occupation</th>
+        <th>Company</th>
         <th>Amount</th>
     </tr>
-    {% for contributor, amount in flagged_individual_contributions %}
+    {% for employer, amount in flagged_individual_contributions %}
         <tr>
-            <td>{{contributor.name}}</td>
-            <td>{{contributor.city}}, {{contributor.state}}</td>
-            <td>{{contributor.employer}}</td>
-            <td>{{contributor.occupation}}</td>
-            <td><a href="{{url_for('handlers.flagged_individual_contribution_detail', candidate_id=candidate.id, contributor_id=contributor.id)}}">{{amount}}</a></td>
+            <td>{{employer.name}}</td>
+            <td><a href="{{url_for('handlers.flagged_individual_contribution_detail', candidate_id=candidate.id, employer_id=employer.id)}}">{{amount}}</a></td>
         </tr>
     {% endfor %}
 </table>
