--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,6 +20,18 @@
   top: -0.05em;
 }
 
+.App-poppIcon {
+  padding-left: 5px;
+  display: inline-block;
+  height: 1.1em;
+  position: absolute;
+}
+
+.App-poppIcon svg {
+  height: 100%;
+  position: absolute;
+}
+
 .candidateList {
   height: 100%;
   padding: 0.6em;
