Adding pledge date field. Showing an badge for those who have taken the pledge.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,26 +7,24 @@
   padding-bottom:50px;
 }
 
-.App-incumbentIcon {
+.App-candidateBadge {
   padding-left: 5px;
   height: 1.2em;
   display: inline-block;
 }
 
-.App-incumbentIcon svg {
+.App-candidateBadge svg {
   height: 100%;
   vertical-align: bottom;
 }
 
-.App-poppIcon {
-  padding-left: 5px;
-  height: 1.2em;
+.App-complianceIcon {
+  height: 1.5em;
   display: inline-block;
 }
 
-.App-poppIcon svg {
+.App-complianceIcon svg{
   height: 100%;
-  vertical-align: bottom;
 }
 
 .candidateList {
