--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,11 +4,16 @@
 }
 
 .App-breadcrumbs {
+  padding-top: 30px;
   padding-bottom:20px;
 }
 
+.App-appName {
+  margin-top: 5px !important;
+}
+
 .App-healthcare-now-logo img {
-  height: 75px;
+  height: 50px;
 }
 
 .App-candidateBadge {
